--- a/secpattern.html
+++ b/secpattern.html
@@ -3,8 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .hello{
+            height: 1000px;
+            width: 1500px;
+            background: white;
+            position: sticky;
+            margin: auto;
+
+        }
+        .how{
+            height: 1000px;
+            width: 1500px;
+            background: lightblue;
+            position: sticky;
+            margin: auto;
+        }
+        .are{
+            height: 1000px;
+            width: 1500px;
+            background: rosybrown;
+            position: sticky;
+            margin: auto;
+        }
+        .you{
+            height: 1000px;
+            width: 1500px;
+            background: orangered;
+            position: sticky;
+            margin: auto;
+        }
+        .case{
+            height: 5%;
+            width: 100%;
+            background: red;
+            position: sticky;
+            margin: auto;
+            aspect-ratio: 1/1;
+            top: 0;
+        }
+        .case2{
+            height: 5%;
+            width: 100%;
+            background: darkslateblue;
+            position: sticky;
+            margin: auto;
+            aspect-ratio: 1/1;
+            top: 0;
+        }
+        .case3{
+            height: 5%;
+            width: 100%;
+            background: darkslategray;
+            position: sticky;
+            margin: auto;
+            aspect-ratio: 1/1;
+            top: 0;
+        }
+        .case4{
+            height: 5%;
+            width: 100%;
+            background: brown;
+            position: sticky;
+            margin: auto;
+            aspect-ratio: 1/1;
+            top: 0;
+        }
+        .txt{
+            display: flex;
+            align-items: center; /* Centers vertically */
+            justify-content: center; /* Centers horizontally */
+            height: 100px;
+            color: black;
+            text-align: center;
+            font-size: 120px;
+        }
+    </style>
 </head>
 <body>
+
+<div class="hello">
+    <div class="case">case1</div>
+    <div class="txt">Hello</div>
+
+</div>
+<div class="how">
+    <div class="case2">case2</div>
+    <div class="txt">How</div>
+</div>
+<div class="are">
+    <div class="case3">case3</div>
+    <div class="txt">Are</div>
+</div>
+
+<div class="you">
+    <div class="case4">case4</div>
+    <div class="txt">You</div>
+</div>
 
 </body>
 </html>
